Fixed layout to work better on mobile.

--- a/app/assets/stylesheets/playings.css.scss
+++ b/app/assets/stylesheets/playings.css.scss
@@ -1,3 +1,22 @@
 // Place all the styles related to the Playings controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+input, textarea, select {
+    max-width: 100%;
+}
+
+.map-container {
+  position: relative;
+  padding-bottom:56.25%; /* 16:9 */
+  height:0;
+  margin:0 auto;
+}
+#mapcanvas {
+  position:absolute;
+  max-width:100%;
+  max-height:100%;
+  width:100%;
+  height:100%;
+}
+
