--- a/app/assets/stylesheets/playnit.css
+++ b/app/assets/stylesheets/playnit.css
@@ -9,5 +9,5 @@
 body {
     font-weight: normal;
     font-style: normal;
-    font: "MuseoSlab500Regular";
+    font-family: "MuseoSlab500Regular";
 }
